[gd_scene load_steps=5 format=2]

[ext_resource path="res://Inventory/Scripts/Inventory.gd" type="Script" id=1]
[ext_resource path="res://Inventory/imgs/inventory_bg.jpg" type="Texture" id=2]
[ext_resource path="res://Inventory/imgs/btn_default.png" type="Texture" id=3]
[ext_resource path="res://Inventory/imgs/btn_default_selected.png" type="Texture" id=4]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
layer = 100

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.27451 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="TextureRect" type="TextureRect" parent="Background/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenuButtons" type="MarginContainer" parent="Background/MarginContainer/HBoxContainer"]
margin_right = 460.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 60
custom_constants/margin_top = 60
custom_constants/margin_left = 60
custom_constants/margin_bottom = 60

[node name="Buttons" type="VBoxContainer" parent="Background/MarginContainer/HBoxContainer/MenuButtons"]
margin_left = 60.0
margin_top = 60.0
margin_right = 400.0
margin_bottom = 440.0
custom_constants/separation = 20

[node name="inventory" type="TextureButton" parent="Background/MarginContainer/HBoxContainer/MenuButtons/Buttons"]
margin_right = 340.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )
expand = true

[node name="save" type="TextureButton" parent="Background/MarginContainer/HBoxContainer/MenuButtons/Buttons"]
margin_top = 100.0
margin_right = 340.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )
expand = true

[node name="load" type="TextureButton" parent="Background/MarginContainer/HBoxContainer/MenuButtons/Buttons"]
margin_top = 200.0
margin_right = 340.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )
expand = true

[node name="exit" type="TextureButton" parent="Background/MarginContainer/HBoxContainer/MenuButtons/Buttons"]
margin_top = 300.0
margin_right = 340.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )
expand = true

[node name="Content" type="VBoxContainer" parent="Background/MarginContainer/HBoxContainer"]
margin_left = 464.0
margin_right = 924.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Background/MarginContainer/HBoxContainer/Content"]
margin_right = 460.0
margin_bottom = 14.0
text = "Content"
align = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer/HBoxContainer/Content"]
margin_top = 18.0
margin_right = 460.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="ColorRect" type="ColorRect" parent="Background/MarginContainer/HBoxContainer/Content/MarginContainer"]
margin_left = 40.0
margin_right = 420.0
margin_bottom = 442.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.47934, 0.609875, 0.882812, 1 )

[node name="ItemList" type="ItemList" parent="Background/MarginContainer/HBoxContainer/Content/MarginContainer"]
margin_left = 40.0
margin_right = 420.0
margin_bottom = 442.0
max_text_lines = 2
[connection signal="pressed" from="Background/MarginContainer/HBoxContainer/MenuButtons/Buttons/exit" to="Background" method="_on_exit_pressed"]
[connection signal="focus_entered" from="Background/MarginContainer/HBoxContainer/Content/MarginContainer/ItemList" to="Background" method="_on_ItemList_focus_entered"]
[connection signal="focus_exited" from="Background/MarginContainer/HBoxContainer/Content/MarginContainer/ItemList" to="Background" method="_on_ItemList_focus_exited"]
